# synthetic-home

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .yaml-lint.yaml  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: cruft.yaml  pages.yaml  publish.yaml  test.yaml
script/synthetichomefest/: __main__.py  create_inventory.py  device_type.py  export_inventory.py  list_device_types.py
synthetic_home/: DESIGN.md  __init__.py  common.py  device_types.py  inventory.py  synthetic_home.py
synthetic_home/registry/: README.md  alarm-system.yaml  calendar.yaml  camera.yaml  display-led.yaml  door-sensor.yaml  exhaust-fan.yaml  fan-oscilating.yaml  garage-door.yaml  gate.yaml  heat-pump.yaml  hvac.yaml  light-dimmable.yaml  light-rgbw.yaml  light.yaml  lock-sensor.yaml  mobile-phone.yaml  motion-sensor.yaml  sensor.yaml  smart-blinds.yaml  smart-lock.yaml  smart-plug.yaml  smart-speaker.yaml  smart-sprinkler.yaml  smart-tv.yaml  switch.yaml  temperature-sensor.yaml  todo-list.yaml  vacuum.yaml  washer.yaml  water-valve.yaml  weather-service.yaml  window-sensor.yaml
synthetic_home/tool/: __init__.py  __main__.py  create_inventory.py  export_inventory.py  list_device_types.py
tests/: __init__.py  conftest.py  test_device_types.py  test_inventory.py  test_synthetic_home.py  test_tool.py
tests/fixtures/: alarm-system-example.yaml  calendar-example.yaml  camera-example.yaml  display-led-example.yaml  door-sensor-example.yaml  fan-example.yaml  gate-example.yaml  home1.yaml  mobile-phone-example.yaml  smart-blinds-example.yaml  smart-lock-example.yaml  smart-plug-example.yaml  smart-speaker-example.yaml  switch-example.yaml  todo-list-example.yaml  washer-example.yaml  weather-example.yaml  window-sensor-example.yaml
tests/homes/: alarm-system-example.yaml  calendar-example.yaml  display-led-example.yaml  home1.yaml  todo-list-example.yaml  washer-example.yaml
tests/snapshots/: test_device_types.ambr  test_synthetic_home.ambr  test_tool.ambr
tests/testdata/: home1.yaml
