[metadata]
name = synthetic_home
version = 2.0.0
description = Library for managing synthetic home device registry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/synthetic-home
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    mashumaro>=3.13
python_requires = >=3.12
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
synthetic_home =
    py.typed
    registry
